--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -38,7 +38,7 @@ p, span, b {
             text-shadow: 0px 1px 2px #ffffff;
         }
         @include media-breakpoint-up(lg){
-            margin-top: -29%;
+            margin-top: -33%;
             font-size: 339%;
             text-shadow: 0px 1px 2px #ffffff;
         }
@@ -55,7 +55,7 @@ p, span, b {
     
         }
         @include media-breakpoint-up(lg){
-            margin-top: -32%;
+            margin-top: -37%;
             font-size: 339%;
             text-shadow: 0px 1px 2px #ffffff;
         }
@@ -71,7 +71,7 @@ p, span, b {
     
         }
         @include media-breakpoint-up(lg){
-            margin-top: -32%;
+            margin-top: -37%;
             font-size: 339%;
             text-shadow: 0px 1px 2px #ffffff;
         }
@@ -676,10 +676,268 @@ p, span, b {
     }
     
 }
-.active{
- 
+
+#transaccion{
+    #titulo{
+    color: $color_azul_oscuro;
+    font-size: 48px;
+    font-weight: bold;
+    }
+    .main-title::before {
+        content: '';
+        position: absolute;
+        height: 3px;
+        width: 55px;
+        background-color: #B58D10;
+        margin: auto;
+        bottom:0;
+    }
+    .margen_cont{
+        margin-top: 8%;
+    }
 }
 
+#arrendatario{
+    .inner-box{
+    position: relative;
+    overflow: hidden;
+    }
+   .overlay-box{
+        position:absolute;
+        left:0px;
+        top:0px;
+        width:100%;
+        height:100%;
+        display:block;
+        background-color:rgba(26,29,31,0.50);
+        -webkit-transition:all 700ms ease;
+        -ms-transition:all 700ms ease;
+        -o-transition:all 700ms ease;
+        transition:all 700ms ease;
+        -webkit-transform:translate(-100%,0%);
+        -ms-transform:translate(-100%,0%);
+        -o-transform:translate(-100%,0%);
+        -moz-transform:translate(-100%,0%);
+        transform:translate(-100%,0%);
+    }
+    .inner-box:hover .overlay-box{
+        opacity:1;
+	-webkit-transform:translate(0%);
+	-ms-transform:translate(0%);
+	-o-transform:translate(0%);
+	-moz-transform:translate(0%);
+	transform:translate(0%);
+    }
+
+    .inner-box .overlay-box .overlay-inner{
+    position:absolute;
+	left:0px;
+	top:0px;
+	width:100%;
+	height:100%;
+	display:table;
+	vertical-align:middle;
+	padding:10px 0px;
+    }
+
+    .inner-box  .overlay-box .purchased{
+        position:absolute;
+        left:0px;
+        bottom:0px;
+        width:100%;
+        font-size:18px;
+        font-weight:500;
+        text-align:center;
+        padding:16px 0px;
+        display:block;
+        color:#ffffff;
+        background-color:rgb(181, 141, 16);
+    }
+    .inner-box .overlay-box h3{
+        position:relative;
+        color:#ffffff;
+        font-size:40px;
+        font-weight:700;
+        text-align:center;
+        text-transform:uppercase;
+    }
+    .inner-box .overlay-box .overlay-inner .content{
+        position:relative;
+        display:table-cell;
+        vertical-align:middle; 
+    }
+
+}
+#propietario{
+    .inner-box{
+        position: relative;
+        overflow: hidden;
+        }
+       .overlay-box{
+            position:absolute;
+            left:0px;
+            top:0px;
+            width:100%;
+            height:100%;
+            display:block;
+            background-color:rgba(26,29,31,0.50);
+            -webkit-transition:all 700ms ease;
+            -ms-transition:all 700ms ease;
+            -o-transition:all 700ms ease;
+            transition:all 700ms ease;
+            -webkit-transform:translate(-100%,0%);
+            -ms-transform:translate(-100%,0%);
+            -o-transform:translate(-100%,0%);
+            -moz-transform:translate(-100%,0%);
+            transform:translate(-100%,0%);
+        }
+        .inner-box:hover .overlay-box{
+            opacity:1;
+        -webkit-transform:translate(0%);
+        -ms-transform:translate(0%);
+        -o-transform:translate(0%);
+        -moz-transform:translate(0%);
+        transform:translate(0%);
+        }
+    
+        .inner-box .overlay-box .overlay-inner{
+        position:absolute;
+        left:0px;
+        top:0px;
+        width:100%;
+        height:100%;
+        display:table;
+        vertical-align:middle;
+        padding:10px 0px;
+        }
+    
+        .inner-box  .overlay-box .purchased{
+            position:absolute;
+            left:0px;
+            bottom:0px;
+            width:100%;
+            font-size:18px;
+            font-weight:500;
+            text-align:center;
+            padding:16px 0px;
+            display:block;
+            color:#ffffff;
+            background-color:rgb(181, 141, 16);
+        }
+        .inner-box .overlay-box h3{
+            position:relative;
+            color:#ffffff;
+            font-size:40px;
+            font-weight:700;
+            text-align:center;
+            text-transform:uppercase;
+        }
+        .inner-box .overlay-box .overlay-inner .content{
+            position:relative;
+            display:table-cell;
+            vertical-align:middle; 
+        }
+    
+}
+#pagospse{
+    .imagen{
+    margin-top: 5%;
+    margin-bottom: 12%;
+    padding: 9px;
+    }
+    .inner-box{
+        position: relative;
+        overflow: hidden;
+        }
+       .overlay-box{
+            position:absolute;
+            left:0px;
+            top:0px;
+            width:100%;
+            height:100%;
+            display:block;
+            background-color:rgba(26,29,31,0.50);
+            -webkit-transition:all 700ms ease;
+            -ms-transition:all 700ms ease;
+            -o-transition:all 700ms ease;
+            transition:all 700ms ease;
+            -webkit-transform:translate(-100%,0%);
+            -ms-transform:translate(-100%,0%);
+            -o-transform:translate(-100%,0%);
+            -moz-transform:translate(-100%,0%);
+            transform:translate(-100%,0%);
+        }
+        .inner-box:hover .overlay-box{
+            opacity:1;
+        -webkit-transform:translate(0%);
+        -ms-transform:translate(0%);
+        -o-transform:translate(0%);
+        -moz-transform:translate(0%);
+        transform:translate(0%);
+        }
+    
+        .inner-box .overlay-box .overlay-inner{
+        position:absolute;
+        left:0px;
+        top:0px;
+        width:100%;
+        height:100%;
+        display:table;
+        vertical-align:middle;
+        padding:10px 0px;
+        }
+    
+        .inner-box  .overlay-box .purchased{
+            position:absolute;
+            left:0px;
+            bottom:0px;
+            width:100%;
+            font-size:18px;
+            font-weight:500;
+            text-align:center;
+            padding:16px 0px;
+            display:block;
+            color:#ffffff;
+            background-color:rgb(181, 141, 16);
+        }
+        .inner-box .overlay-box h3{
+            position:relative;
+            color:#ffffff;
+            font-size:40px;
+            font-weight:700;
+            text-align:center;
+            text-transform:uppercase;
+        }
+        .inner-box .overlay-box .overlay-inner .content{
+            position:relative;
+            display:table-cell;
+            vertical-align:middle; 
+        }
+}
+
+#btn_modal{
+    background-color: #002230 !important;
+    color: white !important;
+    &:hover{
+    background-color: #B58D10 !important;
+    color: white !important;
+    }
+}
+.option_modal{
+    background-color: #B58D10 !important;
+    color: white !important;
+    &:hover{
+        color: #002230 !important;
+    }
+}
+.tamaño_arrendatario_btn{
+    padding-left: 79px !important;
+    padding-right: 79px !important;
+}
+.tamaño_propietario_btn{
+    padding-left: 74px !important;
+    padding-right: 74px !important;   
+}
 .titulo_totalinmuebles{
     text-align: center;
     font-family: 'roboto';
@@ -689,6 +947,9 @@ p, span, b {
 }
 #ultimas_noticias{
     
+    .margen_cont{
+        margin-top: 8%;
+    }
     .letra_titulo{
         color: $color_azul_oscuro;
         font-size: 48px;
