--- a/scss/_zquienes_somos.scss
+++ b/scss/_zquienes_somos.scss
@@ -52,7 +52,7 @@
     }
     @include media-breakpoint-up(lg){
         margin-top: 9%;
-        margin-right: 6%;
+        margin-right: 7%;
     }
     
     .titulo_cont{
@@ -60,6 +60,20 @@
         font-weight: bold;
     }
 
+}
+#video{
+    .video_maestranza{
+        width: 323px;
+        height: 360px;
+        @include media-breakpoint-up(md){
+            width: 640px;
+            height: 360px;
+        }
+        @include media-breakpoint-up(lg){
+            width: 640px;
+            height: 360px;
+        }
+    }
 }
 #banner_contador{
     background: url(../images/banner_estadisticas.jpg);
@@ -77,6 +91,7 @@
     @include media-breakpoint-up(lg){
       
         margin-left: 6%;
+        margin-bottom: 0%;
     }
     
 
