--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -696,6 +696,15 @@ p, span, b {
         margin-top: 8%;
     }
 }
+.asesores{
+    margin-left: 0%;
+    @include media-breakpoint-up(md){
+        margin-left: 0%;
+    }
+    @include media-breakpoint-up(lg){
+        margin-left: 1%;
+    }
+}
 
 #arrendatario{
     margin-bottom: 7%;
@@ -1153,13 +1162,15 @@ p, span, b {
         color: white;
     }
     .color_a_foot_imper{
-        color: $color_azul_oscuro;
-        text-shadow: 0px 1px 2px #ffffff;
+        color: white;
+        text-shadow: 0px 0px 2px #ffffff;
         text-decoration: none;
- 
+  
         &:hover{
-            color: white;
+            color: $color_dorado;
+            text-shadow: inherit;
         }
+       
 
     }
 
