--- a/css/style.css
+++ b/css/style.css
@@ -9580,6 +9580,47 @@ p, span, b {
       padding-top: inherit;
       padding-bottom: inherit; } }
 
+.areaProy {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  float: left;
+  width: auto;
+  font-weight: 300;
+  font-family: "roboto";
+  position: relative;
+  margin-bottom: 5px;
+  margin-right: 20px;
+  display: inline-block; }
+
+.lista_proyexto {
+  -webkit-column-count: 3;
+  column-count: 3; }
+  @media (max-width: 1140px) {
+    .lista_proyexto {
+      -webkit-column-count: 3;
+      column-count: 3; } }
+  @media (max-width: 1024px) {
+    .lista_proyexto {
+      -webkit-column-count: 3;
+      column-count: 3; } }
+  @media (max-width: 768px) {
+    .lista_proyexto {
+      -webkit-column-count: 2;
+      column-count: 2; } }
+  @media (max-width: 425px) {
+    .lista_proyexto {
+      -webkit-column-count: 1;
+      column-count: 1; } }
+  @media (max-width: 360px) {
+    .lista_proyexto {
+      -webkit-column-count: 1;
+      column-count: 1; } }
+  @media (max-width: 250px) {
+    .lista_proyexto {
+      -webkit-column-count: 1;
+      column-count: 1; } }
+
 #detalle_asesor {
   padding: 5%;
   margin-top: 0%; }
