--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -1605,3 +1605,39 @@ p, span, b {
     }
     
 }
+.areaProy {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    float: left;
+    width: auto;
+    font-weight: 300;
+    font-family: "roboto";
+    position: relative;
+    margin-bottom: 5px;
+    margin-right: 20px;
+    display: inline-block;
+    
+}
+.lista_proyexto{
+    column-count:3;
+    @media (max-width: 1140px){
+        column-count:3;
+    }
+    @media (max-width: 1024px){
+        column-count:3;
+    }
+    @media (max-width: 768px){
+        column-count:2;
+    }
+    @media (max-width: 425px){
+        column-count:1;
+    }
+    @media (max-width: 360px){
+        column-count:1;
+    }
+    @media (max-width: 250px){
+        column-count:1;
+    }
+    
+}
