--- a/css/proyectosNvo.css
+++ b/css/proyectosNvo.css
@@ -90,7 +90,7 @@ a:hover, a:focus {
     bottom: 0px;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: #00223059;
     pointer-events: none;
 }
 #list-proyects .infoProyect > a {
