--- a/css/style.css
+++ b/css/style.css
@@ -8769,6 +8769,20 @@ p, span, b {
   margin: auto;
   bottom: 0; }
 
+#Proyectos .titulop {
+  color: #002230;
+  font-size: 48px;
+  font-weight: bold; }
+
+#Proyectos .margen_titulo {
+  margin-top: 7%; }
+  @media (min-width: 768px) {
+    #Proyectos .margen_titulo {
+      margin-top: 6%; } }
+  @media (min-width: 992px) {
+    #Proyectos .margen_titulo {
+      margin-top: 6%; } }
+
 #transaccion #titulo {
   color: #002230;
   font-size: 48px;
@@ -8784,7 +8798,7 @@ p, span, b {
   bottom: 0; }
 
 #transaccion .margen_cont {
-  margin-top: 8%; }
+  margin-top: 1%; }
 
 .asesores {
   margin-left: 0%; }
@@ -9442,9 +9456,17 @@ p, span, b {
     .tex-politica {
       margin-right: 10%;
       margin-left: 0%; } }
-  @media (min-width: 992px) {
+  @media (min-width: 1024px) {
     .tex-politica {
-      margin-right: -3%;
+      margin-right: -2%;
+      margin-left: 0%; } }
+  @media (min-width: 1440px) {
+    .tex-politica {
+      margin-right: -2%;
+      margin-left: 0%; } }
+  @media (min-width: 1441px) and (max-width: 2560px) {
+    .tex-politica {
+      margin-right: -1%;
       margin-left: 0%; } }
 
 .conten_header {
@@ -9621,6 +9643,13 @@ p, span, b {
       -webkit-column-count: 1;
       column-count: 1; } }
 
+#titulo_transacciones {
+  position: relative;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase; }
+
 #detalle_asesor {
   padding: 5%;
   margin-top: 0%; }
@@ -9749,20 +9778,39 @@ p, span, b {
         margin-bottom: 10%;
         margin-top: 0%; } }
 
-#texto_contacto {
-  margin-right: inherit;
-  margin-top: 9%; }
-  @media (min-width: 768px) {
-    #texto_contacto {
-      margin-right: inherit;
-      margin-top: 9%; } }
-  @media (min-width: 992px) {
-    #texto_contacto {
-      margin-top: 9%;
-      margin-right: 7%; } }
-  #texto_contacto .titulo_cont {
-    margin-top: -5%;
-    font-weight: bold; }
+@media (min-width: 320px) {
+  #texto_contacto {
+    margin-right: inherit;
+    margin-top: 9%; } }
+
+@media (min-width: 425px) {
+  #texto_contacto {
+    margin-right: inherit;
+    margin-top: 9%; } }
+
+@media (min-width: 768px) {
+  #texto_contacto {
+    margin-right: inherit;
+    margin-top: 9%; } }
+
+@media (min-width: 1024px) {
+  #texto_contacto {
+    margin-top: 9%;
+    margin-right: 7%; } }
+
+@media (min-width: 1440px) {
+  #texto_contacto {
+    margin-top: 9%;
+    margin-right: 7%; } }
+
+@media (min-width: 1441px) and (max-width: 2560px) {
+  #texto_contacto {
+    margin-top: 9%;
+    margin-right: auto; } }
+
+#texto_contacto .titulo_cont {
+  margin-top: -5%;
+  font-weight: bold; }
 
 #video .video_maestranza {
   width: 323px;
@@ -9787,9 +9835,17 @@ p, span, b {
   @media (min-width: 768px) {
     #banner_contador {
       margin-left: inherit; } }
-  @media (min-width: 992px) {
+  @media (min-width: 1024px) {
     #banner_contador {
       margin-left: 6%;
+      margin-bottom: 0%; } }
+  @media (min-width: 1440px) {
+    #banner_contador {
+      margin-left: 5%;
+      margin-bottom: 0%; } }
+  @media (min-width: 1441px) and (max-width: 2560px) {
+    #banner_contador {
+      margin-left: 0%;
       margin-bottom: 0%; } }
   #banner_contador h5 {
     color: white; }
@@ -9934,9 +9990,6 @@ p, span, b {
   .bd-example {
     margin-left: 5%; } }
 
-.tamaños_parrafo {
-  font-size: 72%; }
-
 #color_titulo_valores22 {
   color: #002230;
   font-weight: bold;
@@ -9992,6 +10045,45 @@ p, span, b {
   padding-bottom: 20px;
   color: #fff;
   text-align: center; }
+
+#color_titulo_valores {
+  color: #002230;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 1px; }
+
+@media (min-width: 320px) {
+  #misionvision {
+    margin-top: 5%;
+    margin-bottom: 5%; } }
+
+@media (min-width: 425px) {
+  #misionvision {
+    margin-top: 5%;
+    margin-bottom: 2%; } }
+
+@media (min-width: 768px) {
+  #misionvision {
+    margin-top: 5%;
+    margin-bottom: 2%; } }
+
+@media (min-width: 1024px) {
+  #misionvision {
+    margin-top: 8%;
+    margin-left: 5%; } }
+
+@media (min-width: 1440px) {
+  #misionvision {
+    margin-top: 8%;
+    margin-left: 5%;
+    margin-bottom: inherit; } }
+
+@media (min-width: 1441px) and (max-width: 2560px) {
+  #misionvision {
+    margin-top: 7%;
+    margin-left: 5%;
+    margin-bottom: inherit; } }
 
 #arrendamientos {
   background-image: url(../images/Gerencia_comercial.jpg);
