--- a/css/style.css
+++ b/css/style.css
@@ -8480,6 +8480,8 @@ p, span, b {
   color: #002230;
   font-size: 48px;
   font-weight: bold; }
+  .letra_gruesa:hover {
+    color: #B58D10 !important; }
 
 .main-title::before {
   content: '';
@@ -8773,6 +8775,8 @@ p, span, b {
   color: #002230;
   font-size: 48px;
   font-weight: bold; }
+  #Proyectos .titulop:hover {
+    color: #B58D10; }
 
 #Proyectos .margen_titulo {
   margin-top: 7%; }
@@ -9044,6 +9048,11 @@ p, span, b {
 .color_dorado {
   color: #B58D10; }
 
+.colortransaccion {
+  color: black; }
+  .colortransaccion:hover {
+    color: #B58D10 !important; }
+
 #ultimas_noticias .margen_cont {
   margin-top: 8%; }
 
@@ -9052,6 +9061,8 @@ p, span, b {
   font-size: 48px;
   font-weight: bold;
   margin-top: 13%; }
+  #ultimas_noticias .letra_titulo:hover {
+    color: #B58D10; }
   @media (min-width: 768px) {
     #ultimas_noticias .letra_titulo {
       margin-top: 9%; } }
