--- a/css/style.css
+++ b/css/style.css
@@ -8754,7 +8754,13 @@ p, span, b {
   object-fit: contain; }
 
 #aliados .margen_cont {
-  margin-top: 8%; }
+  margin-top: 13%; }
+  @media (min-width: 768px) {
+    #aliados .margen_cont {
+      margin-top: 13%; } }
+  @media (min-width: 992px) {
+    #aliados .margen_cont {
+      margin-top: 8%; } }
 
 #aliados .margen_titulo {
   margin-top: 7%; }
@@ -9661,6 +9667,15 @@ p, span, b {
   text-align: center;
   text-transform: uppercase; }
 
+.btn_pdf {
+  border: 2px solid #B58D10 !important;
+  background-color: transparent !important;
+  color: #212121 !important; }
+  .btn_pdf:hover {
+    border: 2px solid #002230 !important;
+    background-color: #B58D10 !important;
+    color: white !important; }
+
 #detalle_asesor {
   padding: 5%;
   margin-top: 0%; }
@@ -9823,17 +9838,38 @@ p, span, b {
   margin-top: -5%;
   font-weight: bold; }
 
-#video .video_maestranza {
-  width: 323px;
-  height: 360px; }
-  @media (min-width: 768px) {
-    #video .video_maestranza {
-      width: 640px;
-      height: 360px; } }
-  @media (min-width: 992px) {
-    #video .video_maestranza {
-      width: 640px;
-      height: 360px; } }
+@media (min-width: 320px) {
+  #video .video_maestranza {
+    width: 90%;
+    height: 100%; } }
+
+@media (min-width: 425px) {
+  #video .video_maestranza {
+    width: 90%;
+    height: 100%; } }
+
+@media (min-width: 768px) {
+  #video .video_maestranza {
+    width: 70%;
+    height: 100%; } }
+
+@media (min-width: 1024px) {
+  #video .video_maestranza {
+    width: 80%;
+    height: 100%;
+    margin-left: 2%; } }
+
+@media (min-width: 1440px) {
+  #video .video_maestranza {
+    width: 76%;
+    height: 100%;
+    margin-left: 8%; } }
+
+@media (min-width: 1441px) and (max-width: 2560px) {
+  #video .video_maestranza {
+    width: 43%;
+    height: 100%;
+    margin-left: inherit; } }
 
 #banner_contador {
   background: url(../images/banner_estadisticas.jpg);
@@ -10008,6 +10044,11 @@ p, span, b {
   line-height: 1.5;
   letter-spacing: 1px; }
 
+#color_titulo_principal {
+  color: #B58D10;
+  line-height: 1.5;
+  letter-spacing: 1px; }
+
 .color_titulo22 {
   color: #B58D10;
   font-size: 95%; }
@@ -10081,7 +10122,7 @@ p, span, b {
 
 @media (min-width: 1024px) {
   #misionvision {
-    margin-top: 8%;
+    margin-top: 6%;
     margin-left: 5%; } }
 
 @media (min-width: 1440px) {
